--- a/rozangangsar/.github/workflows/snake.yml
+++ b/rozangangsar/.github/workflows/snake.yml
@@ -16,7 +16,7 @@ steps:
 - name: Generate snake SVG
 uses: Platane/snk@v3
 with:
-github_user_name: USERNAME
+github_user_name: rozangangsar
 outputs: |
 dist/github-contribution-grid-snake.svg
 dist/github-contribution-grid-snake-dark.svg?palette=github-dark
